# WorldQuant-BRAIN-Alpha

./: .gitignore  README.md  REVIEW.md  _launch_monitor.py  _status.py  build_prod.py  calibrate_weights.py  fetch_official_context.py  launch_web.py  pyproject.toml  run_pipeline.py  test_api_format.py  test_api_root.py  test_auth.py  test_datasets_api.py  test_report.md  validate_data.py
.superdesign/: dark_oled.html  overview_ui_refactor.md  quant_professional.html
brain_alpha_ops/: __init__.py  agent_tools.py  build_inline.py  cli.py  config.py  error_knowledge.py  error_payloads.py  errors.py  jsonl.py  mcp_server.py  models.py  observability.py  official_context_datasets.py  redaction.py  runner.py  task_executor.py  tasks.py  web.py  web_assistant_snapshots.py  web_candidate_check.py  web_candidate_generation.py  web_candidate_selection.py  web_check_availability.py  web_check_batch_job.py  web_cloud_context_refresh.py  web_cloud_snapshot.py  web_config.py  web_get_handlers.py  web_handler_dispatch.py  web_post_handlers.py  web_redline_scoring.py  web_review_api.py  web_risk_guidance.py  web_routes.py  web_run_job.py  web_runtime_state.py  web_security.py  web_server_lifecycle.py  web_sqlite_indexes.py  web_submission_batch.py  (+4 more)
config/: presets.json  run_config.json
data/: official_datasets.json  official_operators.json  prd_alpha_ops_v3.md  prd_alpha_quality_v2.md  qa_ui_refactor_report.md
docs/: ALPHA_PRODUCTION_DIAGNOSIS_20260520.md  CODE_QUALITY_AUDIT_20260514.md  COMPREHENSIVE_DIAGNOSIS_20260516.md  COMPREHENSIVE_DIAGNOSTIC_20260515.md  OPERATING_RULES.md  (+47 more)
(+257 files in other folders)
